Colaboratory を使用して作成しました

--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM4sG45Qslq5uuRIFdqAaYj",
+      "authorship_tag": "ABX9TyP6k1Ge0dUkVouM1PfqhXUB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,7 +201,7 @@
         "id": "Vs9-8yqOKKgD",
         "outputId": "474c35cc-4eb1-44b9-c692-595be9fcc94b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,15 +336,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "63968532-7263-4c77-d489-d4b66f3b18e3"
+        "outputId": "36ba724b-bc33-44bb-eae7-2c6cbbe4f1ed"
       },
       "source": [
         "# n 進数\n",
         "!elixir -e 'IO.puts 0b1000'\n",
         "!elixir -e 'IO.puts 0o10'\n",
-        "!elixir -e 'IO.puts 0xFF'"
+        "!elixir -e 'IO.puts 0xFF' # 小文字でもかまわない 0xff"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,6 +511,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "BvFtlV-khe3e"
+      }
     },
     {
       "cell_type": "markdown",
