Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMdHOztbFMHp8zr/b26CHX+",
+      "authorship_tag": "ABX9TyN7NjmSI/NR8osfLBsNNPJt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,6 +110,99 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
+        "問題  1.11.for文・break・continue | EX11 配下\n",
+        "\n",
+        "未解決\n",
+        "\n",
+        "B - Palindromic Numbers  \n",
+        "A 以上 B 以下の整数のうち、回文数となるものの個数を求めてください。 ただし、回文数とは、先頭に 0 をつけない 10 進表記を文字列として見たとき、前から読んでも後ろから読んでも同じ文字列となるような正の整数のことを指します。\n",
+        "\n",
+        "11009 11332\n",
+        "\n",
+        "=> 4"
+      ],
+      "metadata": {
+        "id": "LNfeQNE3i1Hq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Palindromic Numbers が通らない。 入力例は通るのに云々\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "#define rep(i, n) for (int i = 0; i < (int)(n); i++)\n",
+        "\n",
+        "bool isPalindrome(int orig) {\n",
+        "  int digit, rev, num ;\n",
+        "  digit = rev = 0;  \n",
+        "  num = orig;\n",
+        "  rep(i, 10){\n",
+        "    digit = num % 10;\n",
+        "    rev = (rev * 10) + digit;\n",
+        "    num = num / 10;\n",
+        "    if (num == 0 ) break;\n",
+        "  }\n",
+        "  return (orig == rev);\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  int A, B, count , diff ;\n",
+        "  cin >> A >> B ;\n",
+        "  count = 0;\n",
+        "  diff = B - A;\n",
+        "  rep(i, diff) {\n",
+        "    if (isPalindrome(A+i)) { count += 1; }\n",
+        "  }\n",
+        "  cout << count << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "_8r2vg5ojC-y",
+        "outputId": "8e7c52e0-bad2-4446-c610-f53406c3b529",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 11009 11332 | ./temp"
+      ],
+      "metadata": {
+        "id": "QDNOIByfjdaH",
+        "outputId": "82ad454e-6248-472a-d687-1e14338dc72b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
         "問題\n",
         "\n",
         "EX12 - 足したり引いたり  \n",
@@ -127,6 +220,54 @@
       "metadata": {
         "id": "F4cGyjO2cE2W"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "PUE34leKiSyL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "#define rep(i, n) for (int i = 0; i < (int)(n); i++)\n",
+        "\n",
+        "bool isPalindrome(int orig) {\n",
+        "  int digit, rev, num ;\n",
+        "  digit = rev = 0;  \n",
+        "  num = orig;\n",
+        "  rep(i, 10){\n",
+        "    digit = num % 10;\n",
+        "    rev = (rev * 10) + digit;\n",
+        "    num = num / 10;\n",
+        "    if (num == 0 ) break;\n",
+        "  }\n",
+        "  return (orig == rev);\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  int A, B, count , diff ;\n",
+        "  cin >> A >> B ;\n",
+        "  count = 0;\n",
+        "  diff = B - A;\n",
+        "  rep(i, diff) {\n",
+        "    if (isPalindrome(A+i)) { count += 1; }\n",
+        "  }\n",
+        "  cout << count << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "GC-B1E-KiPlK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
