Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMQ3htiEbmN53OtT/8pcMcc",
+      "authorship_tag": "ABX9TyM4WQ/rLOc66DG+77dVC4tW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -333,18 +333,18 @@
       ],
       "metadata": {
         "id": "YHy_H_YqxP5Y",
-        "outputId": "f0101be1-3118-4c5d-bbd5-d52a49de7451",
+        "outputId": "a0a7c5b6-853b-42af-ea57-0f0eb74937f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting temp.cpp\n"
+            "Writing temp.cpp\n"
           ]
         }
       ]
@@ -356,12 +356,12 @@
       ],
       "metadata": {
         "id": "_vXhOYHf14ct",
-        "outputId": "365a9364-6677-462e-bea2-255b9b9a9589",
+        "outputId": "d1b59517-5fc6-46a7-b7e6-295bae10f81e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1143,7 +1143,19 @@
         "問題   \n",
         "\n",
         "EX13 - 平均との差\n",
-        "\n"
+        "\n",
+        "N人のテストの点数が与えられます。  \n",
+        "それぞれの人の点数が平均点から何点離れているか計算してください。  \n",
+        "切り捨て  \n",
+        "\n",
+        "入力例  \n",
+        "10  \n",
+        "53 21 99 83 75 40 33 62 18 100  \n",
+        "=>    \n",
+        "5  \n",
+        "37  \n",
+        "41  \n",
+        "︙  "
       ],
       "metadata": {
         "id": "ODjCVSjDv-mf"
@@ -1152,18 +1164,51 @@
     {
       "cell_type": "code",
       "source": [
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        " \n",
+        "\n",
         "int main() {\n",
-        "  string S1, S2;\n",
-        "  cin >> S1 >> S2;\n",
-        "  if (S1.size() > S2.size()) cout << S1 << endl;\n",
-        "  else cout << S2 << endl;\n",
+        "  int N, sum, ave;\n",
+        "  cin >> N;\n",
+        "  vector<int> vec(N);\n",
+        "  sum = 0;\n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "    cin >> vec.at(i);\n",
+        "    sum += vec.at(i);\n",
+        "  };\n",
+        "  ave = sum / vec.size();\n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "    if (vec.at(i) >= ave) cout << vec.at(i) - ave << endl;\n",
+        "    else cout << ave - vec.at(i) << endl;\n",
+        "  }\n",
         "}"
       ],
       "metadata": {
-        "id": "fOu-baYTqY8O"
+        "id": "fOu-baYTqY8O",
+        "outputId": "51ed70ca-18c2-4d76-f359-ce3e3d085edb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 10 53 21 99 83 75 40 33 62 18 100 |./temp"
+      ],
+      "metadata": {
+        "id": "App3e7cu-HtD"
       },
       "execution_count": null,
       "outputs": []
@@ -1172,11 +1217,20 @@
       "cell_type": "code",
       "source": [
         "---\n",
-        "問題 EX13.平均点との差\n",
+        "問題  B - Picture Frame\n",
         "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LXL3FsJC5-Fv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
-        "易しめ\n",
-        "B - Picture Frame\n",
         "B - Counting Roads\n",
         "B - Trained?\n",
         "難しめ\n",
@@ -1187,7 +1241,7 @@
         "ぜひリアルタイムでコンテストに挑戦してみてください。\n"
       ],
       "metadata": {
-        "id": "LXL3FsJC5-Fv"
+        "id": "g1z-0yPh-aWk"
       },
       "execution_count": null,
       "outputs": []
