--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNjkiBLKuQC43p15Fyrj8Av",
+      "authorship_tag": "ABX9TyOatH6HQZr/daPj4lUcSwcH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1261,77 +1261,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "g0YVNIAKgVcu"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  [](int n) { cout << \"lambda \" << n << endl; }(0);     // 関数なので()で実行可能\n",
-        "\n",
-        "  auto hoge = [](int x) {\n",
-        "    cout << \"hoge \" << x << endl;\n",
-        "  };\n",
-        "\n",
-        "  hoge(1);\n",
-        "  hoge(10);\n",
-        "\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "XHxPRj5VhlXr",
-        "outputId": "86d417ff-b17c-4c3e-c0c7-d48c88798481",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting temp.cpp\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp -o temp; ./temp"
-      ],
-      "metadata": {
-        "id": "jH8v4pIEh2Sd",
-        "outputId": "5d48456f-5a96-4678-a50a-a911c30c33fb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "lambda 0\n",
-            "hoge 1\n",
-            "hoge 10\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 実験 関数として使うには戻り値が指定できないと困る #=> 出来た\n",
@@ -1343,21 +1272,22 @@
         "    int a, b;\n",
         "    a = 3; b = 4;\n",
         "    auto hoge = [](int x, int y){return x * y;};\n",
-        "    // auto hoge = [](int x, int y) -> int{return x * y;}; # これでもオッケー\n",
+        "    // auto hoge = [](int x, int y) -> int{return x * y;}; # `=>` を使った書き方もあるが、不要みたい\n",
+        "\n",
         "    cout << hoge(a,b) << endl;\n",
         "    cout << [](int x, int y)int{return x * y;}(a,b) << endl;\n",
         "    cout << [](int x, int y) -> int{return x * y;}(a,b) << endl;\n",
-        "    cout << ([](int x, int y) -> int{return x * y;})(a,b) << endl;\n",
+        "    cout << [](int x, int y){int temp = x * y; return temp;}(a,b) << endl;\n",
         "}\n"
       ],
       "metadata": {
-        "id": "dlzXFDwEinzT",
-        "outputId": "a22ccfe8-4599-4fe5-e4df-cbe063817884",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dlzXFDwEinzT",
+        "outputId": "9f5e88a0-b0ef-4481-d633-09ffc3c840ec"
       },
-      "execution_count": 63,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -1374,18 +1304,19 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "ROn5HTvyjCBZ",
-        "outputId": "2dfc2e0e-8130-44eb-84db-91fc9d860b0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ROn5HTvyjCBZ",
+        "outputId": "7528ad5f-030e-4922-813b-76d87f53ed53"
       },
-      "execution_count": 64,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "12\n",
             "12\n",
             "12\n",
             "12\n"
@@ -1396,61 +1327,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# 無名関数 operator() の実装\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "class Mul{\n",
-        "private:\n",
-        "    int i_;\n",
-        "public:\n",
-        "    Mul(int i): i_(i) {}\n",
-        "    int operator()(int j){return i_*j;}     // operator()\n",
-        "};\n",
-        "\n",
-        "\n",
-        "int main(){\n",
-        "    auto doubler = Mul(2);\n",
-        "\n",
-        "    std::cout << doubler(3) << std::endl;\n",
-        "    std::cout << doubler(4) << std::endl;\n",
-        "\n",
-        "    return 1;\n",
-        "}\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "K0sq5WeDgZDw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 実験 無名関数\n",
+        "# 実験 無名関数の練習\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "    int a, b, c;\n",
+        "    int a, b;\n",
         "    a = 3;\n",
         "    b = 4;\n",
-        "    c = [](int x, int y){x * y;}(a, b);\n",
-        "    cout << c << endl;\n",
+        "    auto mul = [](int x, int y){return x * y;};\n",
+        "    cout << mul(a, b) << endl;\n",
         "}"
       ],
       "metadata": {
-        "id": "b-5DOanAcMwk",
-        "outputId": "c4eab633-c993-4457-dd80-5faa584bd237",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b-5DOanAcMwk",
+        "outputId": "bd18a3ab-5ff9-424e-e718-c74eab7df00c"
       },
-      "execution_count": 34,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -1467,23 +1364,19 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "sZ1GG5Ayc1K7",
-        "outputId": "05b252e4-a8ff-488d-9453-0eb1560894c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sZ1GG5Ayc1K7",
+        "outputId": "851241d7-6238-4088-cd5b-c0c6887adf0e"
       },
-      "execution_count": 35,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[01m\u001b[Ktemp.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kint main()\u001b[m\u001b[K’:\n",
-            "\u001b[01m\u001b[Ktemp.cpp:8:38:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kvoid value not ignored as it ought to be\n",
-            "     c = [](int x, int y){x * y;}(a, b\u001b[01;31m\u001b[K)\u001b[m\u001b[K;\n",
-            "                                      \u001b[01;31m\u001b[K^\u001b[m\u001b[K\n",
-            "abcabc\n"
+            "12\n"
           ]
         }
       ]
