Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNTt9gjoCcusxq0K6XEH4NF",
+      "authorship_tag": "ABX9TyPs7PjPGedrkgp1+ayWVihM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1406,6 +1406,7 @@
         "  auto tempfunc = [](int x, string a){string acc=\"\"; for(int i =0;i < x; i++) acc += a; return acc; };\n",
         "\n",
         "  cout << tempfunc(3,str) << endl;\n",
+        "  cout <<  [](int x, string a){string acc=\"\"; for(int i =0;i < x; i++) acc += a; return acc; }(4,\"defg\") << endl;\n",
         "\n",
         "}"
       ],
@@ -1414,9 +1415,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4jrCWQufMVHf",
-        "outputId": "3a429a1d-d6ff-4771-ee81-e2d54e754c81"
+        "outputId": "a21b442e-3b80-4df9-f57f-7d9c1ed15468"
       },
-      "execution_count": 99,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
@@ -1437,15 +1438,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qjIdBAYbMVxc",
-        "outputId": "47940131-8fba-4e38-bddc-f3cfc8183d90"
+        "outputId": "6518d05d-61d2-47a7-8046-cdaed268ba75"
       },
-      "execution_count": 100,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "abcabcabc\n"
+            "abcabcabc\n",
+            "defgdefgdefgdefg\n"
           ]
         }
       ]
