Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNR/iDUkGSOj1NehLMnFx03",
+      "authorship_tag": "ABX9TyPXrMmHd14w9O//b7OkjeeO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1568,10 +1568,10 @@
       ],
       "metadata": {
         "id": "UQZ2xyJioq4Z",
-        "outputId": "c182a582-989f-42f2-dde1-14298094998a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c182a582-989f-42f2-dde1-14298094998a"
       },
       "execution_count": 16,
       "outputs": [
@@ -1590,11 +1590,11 @@
         "!g++ temp.cpp -o temp;  ./temp"
       ],
       "metadata": {
-        "id": "SNjwIERXdy33",
-        "outputId": "0fee9f7e-8dc7-42aa-95bc-403d0918b2e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SNjwIERXdy33",
+        "outputId": "0fee9f7e-8dc7-42aa-95bc-403d0918b2e4"
       },
       "execution_count": 17,
       "outputs": [
@@ -1620,11 +1620,11 @@
         "}"
       ],
       "metadata": {
-        "id": "ewatF7ccd8J_",
-        "outputId": "151c972f-9fab-49fd-c2da-6534601a8567",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ewatF7ccd8J_",
+        "outputId": "151c972f-9fab-49fd-c2da-6534601a8567"
       },
       "execution_count": 13,
       "outputs": [
@@ -1643,11 +1643,11 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "JYe83XcJeaEc",
-        "outputId": "6d89c6ad-53a5-4b0e-c476-433f1cc8c9d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JYe83XcJeaEc",
+        "outputId": "6d89c6ad-53a5-4b0e-c476-433f1cc8c9d3"
       },
       "execution_count": 15,
       "outputs": [
@@ -1686,11 +1686,11 @@
         "}"
       ],
       "metadata": {
-        "id": "V6PjNpBVgqPj",
-        "outputId": "11f4bc00-acf2-43c7-b4c4-0d9cc6f6ba10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V6PjNpBVgqPj",
+        "outputId": "11f4bc00-acf2-43c7-b4c4-0d9cc6f6ba10"
       },
       "execution_count": 18,
       "outputs": [
@@ -1709,11 +1709,11 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "bAEFR3VVhnUT",
-        "outputId": "87e59d03-5d38-4c76-fe5d-efba75fba162",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bAEFR3VVhnUT",
+        "outputId": "87e59d03-5d38-4c76-fe5d-efba75fba162"
       },
       "execution_count": 19,
       "outputs": [
@@ -1749,10 +1749,10 @@
       ],
       "metadata": {
         "id": "bUgLKtTCURoC",
-        "outputId": "d6994917-6239-48e5-9888-f89207a6f50b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d6994917-6239-48e5-9888-f89207a6f50b"
       },
       "execution_count": 20,
       "outputs": [
@@ -1771,11 +1771,11 @@
         "!g++ temp.cpp -o temp; ./temp"
       ],
       "metadata": {
-        "id": "tw0AUobCiVSN",
-        "outputId": "23767fb9-4e67-49cc-d127-5fdfcd7c73cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tw0AUobCiVSN",
+        "outputId": "23767fb9-4e67-49cc-d127-5fdfcd7c73cf"
       },
       "execution_count": 21,
       "outputs": [
@@ -1813,15 +1813,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "tSlW3WM5jCuR"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 問題 EX15.三人兄弟へのプレゼント\n",
@@ -1831,24 +1822,18 @@
         "using namespace std;\n",
         "\n",
         "// 1人のテストの点数を表す配列から合計点を計算して返す関数\n",
-        "// 引数 scores: scores.at(i)にi番目のテストの点数が入っている\n",
         "// 返り値: 1人のテストの合計点\n",
         "int sum(vector<int> scores) {\n",
-        "  // ここにプログラムを追記\n",
+        "  int sum = 0;\n",
+        "  for(int i=0; i < scores.size(); i++){sum += scores.at(i);};\n",
+        "  return sum;\n",
         "}\n",
         "\n",
         "// 3人の合計点からプレゼントの予算を計算して出力する関数\n",
-        "// 引数 sum_a: A君のテストの合計点\n",
-        "// 引数 sum_b: B君のテストの合計点\n",
-        "// 引数 sum_c: C君のテストの合計点\n",
         "// 返り値: なし\n",
         "void output(int sum_a, int sum_b, int sum_c) {\n",
-        "  // ここにプログラムを追記\n",
+        "  cout << sum_a*sum_b*sum_c << endl;\n",
         "}\n",
-        "\n",
-        "// -------------------\n",
-        "// ここから先は変更しない\n",
-        "// -------------------\n",
         "\n",
         "// N個の入力を受け取って配列に入れて返す関数\n",
         "// 引数 N: 入力を受け取る個数\n",
@@ -1881,13 +1866,13 @@
         "}"
       ],
       "metadata": {
-        "id": "g9A2t3y9iLwF",
-        "outputId": "85aff367-78f0-4509-986c-c4506b4dfe84",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g9A2t3y9iLwF",
+        "outputId": "44327d52-63f5-44a0-a862-a3718f62b0ff"
       },
-      "execution_count": 22,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1904,9 +1889,213 @@
         "!g++ temp.cpp -o temp; echo 2 5 7 4 10 9 2 |./temp"
       ],
       "metadata": {
-        "id": "c60XFlHxkgN2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c60XFlHxkgN2",
+        "outputId": "14b2ee52-bee5-4b10-fec5-676215ae495b"
       },
-      "execution_count": 23,
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1848\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "tSlW3WM5jCuR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 範囲for文の構文\n",
+        "# for (配列の要素の型 変数名 : 配列変数) {}\n",
+        "# 問題 整数 a と 5個の整数を与えられて、a と等しいものの個数を求める\n",
+        "# 入力例 入力例 3 1 3 2 5 3 => 2\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int a;\n",
+        "  cin >> a;\n",
+        "  vector<int> data(5);\n",
+        "  for (int i = 0; i < 5; i++) {\n",
+        "    cin >> data.at(i);\n",
+        "  }\n",
+        "  \n",
+        "  int count = 0;\n",
+        "  for (int item : data) {\n",
+        "      if (item == a) count++;\n",
+        "  }\n",
+        "\n",
+        "  cout << count << endl;\n",
+        "}\n"
+      ],
+      "metadata": {
+        "id": "I0QRsdz8qEUI",
+        "outputId": "303eee5d-e083-4194-92fe-d1b64322f1dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 3 1 3 2 5 3 |./temp"
+      ],
+      "metadata": {
+        "id": "w0ydvnIXtv1N",
+        "outputId": "2353031b-e850-4ebb-fe3d-06bac097841c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "範囲for文はコンテナと呼ばれるデータ型に対して使うことができます。\n",
+        "配列はコンテナの一種です。 その他にも文字列型(string型)はコンテナの一種なので、範囲for文を用いることができます。\n",
+        "string型の変数に対して、1文字ずつ処理したい場合に便利です。\n",
+        "\n",
+        "Copy\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  string str = \"hello\";\n",
+        "  for (char c : str) {\n",
+        "    if (c == 'l') {\n",
+        "      c = 'L';\n",
+        "    }\n",
+        "    cout << c;\n",
+        "  }\n",
+        "  cout << endl;\n",
+        "}\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  string str = \"hello\";\n",
+        "  for (char c : str) {\n",
+        "    if (c == 'l') {\n",
+        "      c = 'L';\n",
+        "    }\n",
+        "    cout << c;\n",
+        "  }\n",
+        "  cout << endl;\n",
+        "}\n",
+        "実行結果\n",
+        "heLLo\n",
+        "細かい話\n",
+        "ループ構文の使い分け\n",
+        "ループ構文には1.10で扱ったwhile文、1.11で扱ったfor文、今回紹介した範囲for文がありますが、どのように使い分ければ良いのでしょうか。\n",
+        "\n",
+        "for文は1.11で見たように「N回処理する」というようなパターンをwhile文より短く書くための構文でした。 今回紹介した範囲for文は配列に対する処理をfor文よりも簡潔に書くための構文でした。 よって、以下のように使い分けると良いでしょう。\n",
+        "\n",
+        "配列の全ての要素に対する処理を行なう場合 → 範囲for文\n",
+        "それ以外で一定回数繰り返し処理する場合 → for文\n",
+        "それ以外の場合 → while文\n",
+        "ただし、例えば配列の要素に対する処理でも、範囲for文を用いるよりもfor文やwhile文を用いた方が簡潔に書ける場合もあるので、 必ずしも上のように使い分ける必要はありません。\n",
+        "\n",
+        "while文が適しているケース\n",
+        "「整数Nがあるとき、Nが2で最大で何回割り切れるかを求める」という処理を考えます。 この処理は配列の要素に対する処理ではありませんし、具体的に何回処理を繰り返せば良いのかということも分かりません。 この処理にはwhile文が適しているでしょう。\n",
+        "\n",
+        "次のサンプルプログラムは、入力で与えられた整数Nが2で割り切れる回数を出力するプログラムです。\n",
+        "\n",
+        "Copy\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  int N;\n",
+        "  cin >> N;\n",
+        " \n",
+        "  int count = 0;\n",
+        "  while (N > 0) {\n",
+        "    // 2で割り切れなければループを抜ける\n",
+        "    if (N % 2 > 0) {\n",
+        "      break;\n",
+        "    }\n",
+        "    N = N / 2;\n",
+        "    count++;\n",
+        "  }\n",
+        "  cout << count << endl;\n",
+        "}\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int N;\n",
+        "  cin >> N;\n",
+        "\n",
+        "  int count = 0;\n",
+        "  while (N > 0) {\n",
+        "    // 2で割り切れなければループを抜ける\n",
+        "    if (N % 2 > 0) {\n",
+        "      break;\n",
+        "    }\n",
+        "    N = N / 2;\n",
+        "    count++;\n",
+        "  }\n",
+        "  cout << count << endl;\n",
+        "}\n",
+        "入力1\n",
+        "8\n",
+        "実行結果1\n",
+        "3\n",
+        "入力2\n",
+        "5\n",
+        "実行結果1\n",
+        "0\n",
+        "問題\n",
+        "リンク先の問題を解いてください。\n",
+        "\n",
+        "EX16.隣り合う同じ値を探す\n",
+        "前のページ | 次のページ\n",
+        "\n",
+        "FacebookTwitterHatena共有\n",
+        "ルール 用語集\n",
+        "利用規約 プライバシーポリシー 個人情報保護方針 企業情報 よくある質問 お問い合わせ 資料請求\n",
+        "Copyright Since 2012 ©AtCoder Inc. All rights reserved.\n",
+        " ページトップ"
+      ],
+      "metadata": {
+        "id": "7ubpn-YxrqkF"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
