Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPXrMmHd14w9O//b7OkjeeO",
+      "authorship_tag": "ABX9TyMWFm8TY0yb675kPe7NElh9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1573,7 +1573,7 @@
         },
         "outputId": "c182a582-989f-42f2-dde1-14298094998a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1596,7 +1596,7 @@
         "id": "SNjwIERXdy33",
         "outputId": "0fee9f7e-8dc7-42aa-95bc-403d0918b2e4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1626,7 +1626,7 @@
         "id": "ewatF7ccd8J_",
         "outputId": "151c972f-9fab-49fd-c2da-6534601a8567"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1649,7 +1649,7 @@
         "id": "JYe83XcJeaEc",
         "outputId": "6d89c6ad-53a5-4b0e-c476-433f1cc8c9d3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1692,7 +1692,7 @@
         "id": "V6PjNpBVgqPj",
         "outputId": "11f4bc00-acf2-43c7-b4c4-0d9cc6f6ba10"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,7 +1715,7 @@
         "id": "bAEFR3VVhnUT",
         "outputId": "87e59d03-5d38-4c76-fe5d-efba75fba162"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1754,7 +1754,7 @@
         },
         "outputId": "d6994917-6239-48e5-9888-f89207a6f50b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1777,7 +1777,7 @@
         "id": "tw0AUobCiVSN",
         "outputId": "23767fb9-4e67-49cc-d127-5fdfcd7c73cf"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1872,7 +1872,7 @@
         "id": "g9A2t3y9iLwF",
         "outputId": "44327d52-63f5-44a0-a862-a3718f62b0ff"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1895,7 +1895,7 @@
         "id": "c60XFlHxkgN2",
         "outputId": "14b2ee52-bee5-4b10-fec5-676215ae495b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1905,15 +1905,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "tSlW3WM5jCuR"
-      }
     },
     {
       "cell_type": "code",
@@ -1949,7 +1940,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1972,7 +1963,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1986,11 +1977,9 @@
     {
       "cell_type": "code",
       "source": [
-        "範囲for文はコンテナと呼ばれるデータ型に対して使うことができます。\n",
-        "配列はコンテナの一種です。 その他にも文字列型(string型)はコンテナの一種なので、範囲for文を用いることができます。\n",
-        "string型の変数に対して、1文字ずつ処理したい場合に便利です。\n",
-        "\n",
-        "Copy\n",
+        "# 範囲for文はvectorだけでなくコンテナと呼ばれるデータ型に対して使うことが出来る\n",
+        "# 文字列(string)はコンテナの一種なので、範囲for文を用いることが出来る\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -2003,100 +1992,219 @@
         "    cout << c;\n",
         "  }\n",
         "  cout << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  string str = \"hello\";\n",
-        "  for (char c : str) {\n",
-        "    if (c == 'l') {\n",
-        "      c = 'L';\n",
-        "    }\n",
-        "    cout << c;\n",
-        "  }\n",
-        "  cout << endl;\n",
-        "}\n",
-        "実行結果\n",
-        "heLLo\n",
-        "細かい話\n",
-        "ループ構文の使い分け\n",
-        "ループ構文には1.10で扱ったwhile文、1.11で扱ったfor文、今回紹介した範囲for文がありますが、どのように使い分ければ良いのでしょうか。\n",
-        "\n",
-        "for文は1.11で見たように「N回処理する」というようなパターンをwhile文より短く書くための構文でした。 今回紹介した範囲for文は配列に対する処理をfor文よりも簡潔に書くための構文でした。 よって、以下のように使い分けると良いでしょう。\n",
-        "\n",
-        "配列の全ての要素に対する処理を行なう場合 → 範囲for文\n",
-        "それ以外で一定回数繰り返し処理する場合 → for文\n",
-        "それ以外の場合 → while文\n",
-        "ただし、例えば配列の要素に対する処理でも、範囲for文を用いるよりもfor文やwhile文を用いた方が簡潔に書ける場合もあるので、 必ずしも上のように使い分ける必要はありません。\n",
-        "\n",
-        "while文が適しているケース\n",
-        "「整数Nがあるとき、Nが2で最大で何回割り切れるかを求める」という処理を考えます。 この処理は配列の要素に対する処理ではありませんし、具体的に何回処理を繰り返せば良いのかということも分かりません。 この処理にはwhile文が適しているでしょう。\n",
-        "\n",
-        "次のサンプルプログラムは、入力で与えられた整数Nが2で割り切れる回数を出力するプログラムです。\n",
-        "\n",
-        "Copy\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        " \n",
-        "int main() {\n",
-        "  int N;\n",
-        "  cin >> N;\n",
-        " \n",
-        "  int count = 0;\n",
-        "  while (N > 0) {\n",
-        "    // 2で割り切れなければループを抜ける\n",
-        "    if (N % 2 > 0) {\n",
-        "      break;\n",
-        "    }\n",
-        "    N = N / 2;\n",
-        "    count++;\n",
-        "  }\n",
-        "  cout << count << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  int N;\n",
-        "  cin >> N;\n",
-        "\n",
-        "  int count = 0;\n",
-        "  while (N > 0) {\n",
-        "    // 2で割り切れなければループを抜ける\n",
-        "    if (N % 2 > 0) {\n",
-        "      break;\n",
-        "    }\n",
-        "    N = N / 2;\n",
-        "    count++;\n",
-        "  }\n",
-        "  cout << count << endl;\n",
-        "}\n",
-        "入力1\n",
-        "8\n",
-        "実行結果1\n",
-        "3\n",
-        "入力2\n",
-        "5\n",
-        "実行結果1\n",
-        "0\n",
-        "問題\n",
-        "リンク先の問題を解いてください。\n",
-        "\n",
-        "EX16.隣り合う同じ値を探す\n",
-        "前のページ | 次のページ\n",
-        "\n",
-        "FacebookTwitterHatena共有\n",
-        "ルール 用語集\n",
-        "利用規約 プライバシーポリシー 個人情報保護方針 企業情報 よくある質問 お問い合わせ 資料請求\n",
-        "Copyright Since 2012 ©AtCoder Inc. All rights reserved.\n",
-        " ページトップ"
+        "}"
       ],
       "metadata": {
-        "id": "7ubpn-YxrqkF"
+        "id": "7ubpn-YxrqkF",
+        "outputId": "f43a26b5-9de4-413d-999b-e55a42218879",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; ./temp"
+      ],
+      "metadata": {
+        "id": "UgB5QldN_fE_",
+        "outputId": "c3c4e06b-cfe1-4685-fb35-6382457eb5a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "heLLo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ループ構文の使い分け\n",
+        "# while文が適しているケース\n",
+        "# 「整数Nがあるとき、Nが2で最大で何回割り切れるかを求める」という処理を考える\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  int N;\n",
+        "  cin >> N;\n",
+        " \n",
+        "  int count = 0;\n",
+        "  while (N > 0) {\n",
+        "    // 2で割り切れなければループを抜ける\n",
+        "    if (N % 2 > 0) {\n",
+        "      break;\n",
+        "    }\n",
+        "    N = N / 2;\n",
+        "    count++;\n",
+        "  }\n",
+        "  cout << count << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "SErFyC1R_aB1",
+        "outputId": "bad4bed3-cf67-44ed-c45f-1a0f2c8fa377",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 8 |./temp"
+      ],
+      "metadata": {
+        "id": "CE7R7BNxAZJZ",
+        "outputId": "92052b4b-27ae-44a6-cd51-6c3e5382acd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "tSlW3WM5jCuR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "未解決問題  \n",
+        "\n",
+        "再帰を使ってwhileを使わずに    \n",
+        "「整数Nがあるとき、Nが2で最大で何回割り切れるかを求める」"
+      ],
+      "metadata": {
+        "id": "ApmB4-JxAup8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "EX16.隣り合う同じ値を探す\n",
+        "\n",
+        "5つの要素からなる配列 \n",
+        "同じ値の要素が隣り合っているような箇所が存在するかどうかを判定  \n",
+        "存在するなら\"YES\"を、存在しなければ\"NO\"を出力\n",
+        "\n",
+        "入力例  \n",
+        "5 3 3 1 4"
+      ],
+      "metadata": {
+        "id": "ZhjL_AvrANrY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  vector<int> data(5);\n",
+        "  for (int i = 0; i < 5; i++) {\n",
+        "    cin >> data.at(i);\n",
+        "  };\n",
+        "\n",
+        "  string answer = \"NO\";\n",
+        "\n",
+        "  for (int i = 0; i < data.size()-1;i++){\n",
+        "      if (data.at(i)==data.at(i+1)){\n",
+        "          answer = \"YES\";\n",
+        "          break;\n",
+        "      }\n",
+        "  };\n",
+        "  cout << answer << endl;\n",
+        "}\n"
+      ],
+      "metadata": {
+        "id": "msYGRA1YF3ZR",
+        "outputId": "194abcd3-3c7f-4345-aeff-8b72a8f7e822",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 5 3 3 1 4 |./temp"
+      ],
+      "metadata": {
+        "id": "Nnc-sRsLF2nz",
+        "outputId": "67abee70-2b39-481b-fe54-da66d25d690d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "YES\n"
+          ]
+        }
+      ]
     }
   ]
 }
